--- a/user-list-app/src/index.css
+++ b/user-list-app/src/index.css
@@ -13,19 +13,29 @@ body {
 body.darker{
   
 }
+
 .card{
   text-align: center;
   background-color: rebeccapurple;
-  margin-top:100px;
+  margin-top:50px;
   border: 1px solid black;
   width: 50%;
-  min-height:300px ;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
     color: white;
     font-size: 18px;
 }
+.card ul {
+  list-style: none;
+  padding: 0;
+}
+.card ul li {
+  text-decoration: none;
+  padding:20px 10px;
+
+}
+
 .form div{
   margin:20px;
 }
